--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -1,7 +1,25 @@
-move-folders:
-#    CandyUI/CandyUI_InterfaceMenu: CandyUI_InterfaceMenu
-    CandyUI/CandyUI_Nameplates: CandyUI_Nameplates
-#    CandyUI/CandyUI_Options: CandyUI_Options
-#    CandyUI/CandyUI_Resources: CandyUI_Resources
-#    CandyUI/CandyUI_UnitFrames: CandyUI_UnitFrames
+package-as: KillerCupcakes
 
+externals:
+
+move-folders:
+    # KillerCupcakes/Modules/Fire: KillerCupcakesOnFire
+    # KillerCupcakes/Modules/Sky: KillerCupcakesInTheSky
+    CandyUI/CandyUI_InterfaceMenu: CandyUI_InterfaceMenu
+    CandyUI/CandyUI_Nameplates: CandyUI_Nameplates
+    CandyUI/CandyUI_Options: CandyUI_Options
+    CandyUI/CandyUI_Resources: CandyUI_Resources
+    CandyUI/CandyUI_UnitFrames: CandyUI_UnitFrames
+
+ignore: # Files and directories beginning with a dot (such as .git) are automatically ignored, as is the pgkmeta file itself.
+    - Scripts
+
+required-dependencies:
+
+optional-dependencies:
+
+manual-changelog: CHANGELOG.txt
+
+license-output: LICENSE.txt
+
+tools-used:
