--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -1,4 +1,4 @@
-package-as: CandyUI-@project-version@
+package-as: CandyUI
 
 ignore: # Files and directories beginning with a dot (such as .git) are automatically ignored, as is the pgkmeta file itself.
     - Scripts
