--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -2,8 +2,9 @@ package-as: CandyUI
 
 ignore: # Files and directories beginning with a dot (such as .git) are automatically ignored, as is the pgkmeta file itself.
     - Scripts
+    - README.md
 
 manual-changelog: CHANGELOG.txt
 
-license-output: LICENSE.txt
+license-output: LICENSE
 
