--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -3,6 +3,7 @@ package-as: CandyUI
 ignore: # Files and directories beginning with a dot (such as .git) are automatically ignored, as is the pgkmeta file itself.
     - Scripts
     - README.md
+    - LICENSE
 
 license-output: LICENSE
 
