--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto detect text files and perform LF normalization
-* text=auto whitespace=tab-in-indent,tabwidth=2
+* text=auto
 
 # Custom for Visual Studio
 *.cs     diff=csharp
