--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -14,6 +14,8 @@ move-folders:
 ignore:
   - README.md
   - LICENSE
+  - CHANGELOG.MD
+  - candyUI.jpg
 
 license-output: LICENSE
 enable-nolib-creation: no
